--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div class="body-bg">
+        <div>Новая запись</div>
         <header class="main-header">
             <div class="logo">
                 <span class="logo__text">your</span>logo
