--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div class="body-bg">
         <div>Новая запись</div>
+        <div>Новая запис2</div>
         <header class="main-header">
             <div class="logo">
                 <span class="logo__text">your</span>logo
