--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="body-bg">
         <div>Новая запись</div>
         <div>Новая запис2</div>
+        <div>Новая запис3</div>
         <header class="main-header">
             <div class="logo">
                 <span class="logo__text">your</span>logo
