--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="body-bg">
-        <div>Новая запись</div>
+        <div>Новая запись1</div>
         <div>Новая запис2</div>
         <div>Новая запис3</div>
         <header class="main-header">
