--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
         <div>Новая запись1</div>
         <div>Новая запис2</div>
         <div>Новая запис3</div>
+        <div>Новая запис4</div>
         <header class="main-header">
             <div class="logo">
                 <span class="logo__text">your</span>logo
-            </div>
+            </div
             <div class="block-nav">
                 <nav>
                     <ul class="nav-list">
