--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <div>Новая запис2</div>
         <div>Новая запис3</div>
         <div>Новая запис4</div>
+        <div>Новая запис4</div>
+        <div>Новая запис4</div>
+        <div>Новая запис4</div>
         
         <header class="main-header">
             <div class="logo">
