new file gitignor

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div>Новая запись1</div>
         <div>Новая запис2</div>
         <div>Новая запис3</div>
+        
         <header class="main-header">
             <div class="logo">
                 <span class="logo__text">your</span>logo
@@ -42,6 +43,7 @@
                 </div>
             </div>
         </header>
+
         <main class="sabyr-main">
             <div class="social">
             </div>
@@ -60,5 +62,6 @@
     <footer class="sabyr-footer">
 
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
